# OpenMetalMax

./: .gitignore  .gitmodules  README.md
Iris2D/: CMakeLists.txt
Iris2D/include/Common/: Iris2D.h  Iris2DCompileConfigure.h  IrisCommon.h
Iris2D/include/Common/Iris2D/: IIrisBitmap.h  IrisApp.h
Iris2D/include/DirectX/: IrisCommon.h
Iris2D/include/DirectX/Iris2D/: IrisBitmap.h  IrisColor.h  IrisFont.h  IrisGraphics.h  IrisRect.h  IrisSprite.h  IrisViewport.h
Iris2D/include/DirectX/Iris2D Util/: IrisResult.h
Iris2D/include/DirectX/Iris2D/IrisShaders/: IrisSpritePixelShader.h  IrisSpriteVertexShader.h
Iris2D/include/OpenGL/: IrisCommon.h
Iris2D/include/OpenGL/Iris2D/: IrisOpenGLHelper.h
Iris2D/src/: main.cpp
Iris2D/src/Common/Iris2D/: IrisApp.cpp
Iris2D/src/DirectX/Iris2D/IrisShaders/: IrisSpriteVertexShader.cpp
